--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#project files
+Client\appsettings.json
+TodoListService\appsettings.json
+
 # User-specific files
 *.rsuser
 *.suo
